src/test/deca/syntax/invalid/obtained_res/oversizedFloatsynt.res
./src/test/deca/syntax/invalid/created/RecognitionErrors/oversizedFloat.deca:9:14: InvalidValueException: Float too large 
